--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/style.css">
+      <!-- jquery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
       <title>js-ToDo-clone</title>
    </head>
    <body>
+      <h1>Cose da fare prima di morire </h1>
+
+      <ul class="coseDaFare">
+         <li>Viaggiare per un anno intero</li>
+      </ul>
+      <label for="aggiungi">aggiungine una</label>
+      <input id="aggiungi" type="text">
+      <div class="template">
+         <li></li>
+      </div>
+
       <script src="js/script.js"></script>
    </body>
 </html>
